# godot-websocket-server

./: .gitignore  MCTSSolver.cs  MSTCData.cs  README.md  config.gd  datetime.gd  export_presets.cfg  icon.svg.import  motion_recognition.gd  motion_recognition.tscn  onnx_loader.gd  plot_display.gd  plot_display.tscn  project.godot  sensor_data_store.gd  signal_bus.gd  socket_manager.gd  socket_manager_v2.gd  socket_manager_v2.tscn  svc.gd  svc.tscn
onnx/: README.md  ahrs.ipynb  ahrs_mahony.ipynb  iris.ipynb  mtsc.ipynb  mtsc_ahrs.ipynb  mtsc_inceptiontime.ipynb  mtsc_template_matching.ipynb  pyproject.toml  requirements.txt  temp.ipynb  tilt.ipynb
onnx/ahrs/: README.md  ahrs_madgwick.ipynb  ahrs_mahony.ipynb  ahrs_tilt.ipynb
onnx/onnx_example/: iris.ipynb  rf_iris.onnx
onnx/v1/: mtsc.ipynb  mtsc_ahrs.ipynb  mtsc_linear.ipynb  mtsc_template_matching.ipynb
onnx/v2/: clf_best.joblib  clf_litemvtime.joblib  clf_minirocket.joblib  clf_rf.joblib  clf_rf.onnx  clf_softmax.joblib  clf_svm.joblib  clf_svm.onnx  cmat_knn.png.import  cmat_litemvtime.png.import  cmat_minirocket.png.import  cmat_rf.png.import  cmat_softmax.png.import  cmat_svm.png.import  label_encoder.joblib  minirocket_hit_nohit.joblib  mtsc_v2.ipynb  mtsc_v2_ahrs.ipynb  mtsc_v2_gracia_minx copy.ipynb  mtsc_v2_gracia_minx.ipynb  mtsc_v2_minx.ipynb  mtsc_v2_regular.ipynb  mtsc_v3.ipynb  mtsc_v3_litemvtime.ipynb  rf_iris.onnx  svc.joblib  svc.onnx
onnx/v2/dataset/v2_gold_annotation/: annotation_2026-01-20_13-17-36-204.csv  annotation_2026-01-20_13-30-06-088.csv  annotation_2026-01-20_13-42-13-094.csv  (+13 more)
(+206 files in other folders)
