[project]
name = "capstone"
version = "0.1.0"
description = "Gesture classification based on IMU sensors: training & evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aeon>=1.3.0",
    "onnxruntime>=1.23.2",
    "seaborn>=0.13.2",
    "skl2onnx>=1.19.1",
    "sktime>=0.40.1",
    "tensorflow>=2.20.0",
    "tsai>=0.4.1",
    "xgboost>=3.1.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
